[project]
name = "iconsole-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christopher Smith", email = "christopher.smith@qoria.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=3.0.2",
    "bleak-retry-connector>=4.6.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
